k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
        componenet: postgres
  template:
    metadata:
      labels:
        componenet: postgres
    spec:
        containers:
            - name: postgres
              image: postgres
              ports:
                - containerPort: 5432
