k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
        componenet: redis
  template:
    metadata:
      labels:
        componenet: redis
    spec:
        containers:
            - name: redis
              image: redis
              ports:
                - containerPort: 6379
