k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
        componenet: server
  template:
    metadata:
      labels:
        componenet: server
    spec:
        containers:
            - name: server
              image: stephengrider/multi-server
              ports:
                - containerPort: 5000
